--- a/src/styles/Cropper.module.css
+++ b/src/styles/Cropper.module.css
@@ -1,13 +1,4 @@
-.inputWidth {
-    position: relative;
-    width: 10rem;
-    padding: 0.8rem;
-    border-radius: 1rem;
-    font-size: xx-large;
-    text-align: right;
-    margin: 2rem 0 ;
-}
-.inputHeight {
+.inputWidth, .inputHeight {
     position: relative;
     width: 10rem;
     padding: 0.8rem;
@@ -15,6 +6,14 @@
     font-size: xx-large;
     text-align: right;
     margin: 2rem 0;
+}
+.inputWidth::after {
+    content: "";
+    position: absolute;
+    background-color: red;
+    width: 1rem;
+    height: 1rem;
+    left: 10px;
 }
 .inputSuffix {
     font-size: xx-large;
